# castek_git

HelloExt/: .project  .pydevproject  Hello.cpp  Hello.py  setup.py
Ir/: .project  .pydevproject  main.py  sci.py
boost/: CMakeLists.txt  Makefile  boost  format.cpp  gil.cpp
boost/gil/: gil.sln  gil.vcproj
c++11/: Makefile  Makefile.nmake  auto.cxx  lambda.cxx  rvalue.cxx  test.cxx
cl/: executable.lisp
temp/: Makefile  README.txt  template_match
template_match/: CMakeLists.txt  Makefile  Makefile~  camera.cpp  contour_match.cpp  contour_match2.cpp  contour_match3.cpp  find_obj.cpp  opencv2.cpp  opencv2_1.cpp  opencv7_5.cpp  template_match.cpp
template_match/contour/: contour.sln  contour.vcproj
