cmake_minimum_required(VERSION 2.6)
IF(UNIX)
MESSAGE(MSG, "Unix flavor ~")
INCLUDE_DIRECTORIES("/usr/local/include")
INCLUDE_DIRECTORIES("/usr/local/include/opencv")
LINK_DIRECTORIES("/usr/local/lib")
ELSEIF(WIN32)
MESSAGE(MSG, "Win32 flavor ~")
# Set(CMAKE_BUILD_TYPE Release)
Set(CMAKE_BUILD_TYPE Debug)
INCLUDE_DIRECTORIES("d:/boost-trunk")
INCLUDE_DIRECTORIES("d:/libpng-1.2.37-lib/include")
INCLUDE_DIRECTORIES("d:/zlib-1.2.4")
LINK_DIRECTORIES("d:/boost-trunk/stage/lib")
LINK_DIRECTORIES("d:/libpng-1.2.37-lib/lib")
LINK_DIRECTORIES("d:/zlib-1.2.4")

ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (gil)
add_executable(gil gil.cpp)

IF(UNIX)
# target_link_libraries(gil)
ELSEIF(WIN32)
target_link_libraries(gil "libpng" "zlib")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

