cmake_minimum_required(VERSION 2.6)
project (template_match)
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include/opencv")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include")
LINK_DIRECTORIES("d:/opencv/opencv/build/x86/vc9/lib")
add_executable(template_match template_match.cpp)

project (exmaple1)
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include/opencv")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include")
LINK_DIRECTORIES("d:/opencv/opencv/build/x86/vc9/lib")
add_executable(example1 opencv1.cpp)

project (exmaple2)
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include/opencv")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include")
LINK_DIRECTORIES("d:/opencv/opencv/build/x86/vc9/lib")
add_executable(example2 opencv2.cpp)
