cmake_minimum_required(VERSION 2.6)
IF(UNIX)
INCLUDE_DIRECTORIES("/usr/local/include")
INCLUDE_DIRECTORIES("/usr/local/include/opencv")
LINK_DIRECTORIES("/usr/local/lib")
ELSEIF(WIN32)
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include/opencv")
LINK_DIRECTORIES("d:/opencv/opencv/build/x86/vc9/lib")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (template_match)
add_executable(template_match template_match.cpp)
target_link_libraries(template_match opencv_highgui opencv_core opencv_imgproc)

project (opencv7_5)
add_executable(opencv7_5 opencv7_5.cpp)
target_link_libraries(opencv7_5 opencv_highgui opencv_core opencv_imgproc)

