cmake_minimum_required(VERSION 2.6)
IF(UNIX)
MESSAGE(MSG, "Unix flavor ~")
INCLUDE_DIRECTORIES("/usr/local/include")
INCLUDE_DIRECTORIES("/usr/local/include/opencv")
LINK_DIRECTORIES("/usr/local/lib")
ELSEIF(WIN32)
MESSAGE(MSG, "Win32 flavor ~")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include")
INCLUDE_DIRECTORIES("d:/opencv/opencv/build/include/opencv")
LINK_DIRECTORIES("d:/opencv/opencv/build/x86/vc9/lib")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (contour_match2)
add_executable(contour_match2 contour_match2.cpp)

IF(UNIX)
target_link_libraries(contour_match2 opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(contour_match2 "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (contour_match)
add_executable(contour_match contour_match.cpp)

IF(UNIX)
target_link_libraries(contour_match opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(contour_match "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (template_match)
add_executable(template_match template_match.cpp)

IF(UNIX)
target_link_libraries(template_match opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(template_match "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (opencv7_5)
add_executable(opencv7_5 opencv7_5.cpp)

IF(UNIX)
target_link_libraries(opencv7_5 opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(opencv7_5 "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (opencv2_1)
add_executable(opencv2_1 opencv2_1.cpp)

IF(UNIX)
target_link_libraries(opencv2_1
 opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(opencv2_1 "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()

project (opencv2_2)
add_executable(opencv2_2 opencv2_2.cpp)

IF(UNIX)
target_link_libraries(opencv2_2 opencv_highgui opencv_core opencv_imgproc)
ELSEIF(WIN32)
# target_link_libraries(opencv2_2 "opencv_highgui231" "opencv_core231" "opencv_imgproc231")
ELSE()
MESSAGE(FATAL, "I cann't recognize this platform.")
ENDIF()
